styles: fixed wrong padding in about page

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -6,7 +6,7 @@ $dark-brown: #674d3f;
   flex-direction: column;
   gap: 2rem;
   width: 55vw;
-  padding: 2rem 0 1rem;
+  padding: 0.5rem 0 1rem 2rem;
 
   .link-btn {
     max-width: 300px;
